--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,14 @@ Thumbs.db
 # Claude memory files
 CLAUDE.md
 
+# Node
+node_modules/
+package-lock.json
+
+# Binary captures
+*.bin
+*.wav
+
 # Local testing
 test_*.py
 scratch/
